--- a/.github/workflows/run-nightly-regression-tests.yml
+++ b/.github/workflows/run-nightly-regression-tests.yml
@@ -1,1 +1,40 @@
+name: Scheduled Playwright Tests
 
+on:
+  schedule:
+    # Run every day at 8:00 PM CST
+    # The cron expression syntax is: minute hour day_of_month month day_of_week
+    - cron: '0 20 * * *'
+  workflow_dispatch:
+    # Allows you to run the workflow manually from the GitHub UI
+
+jobs:
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: npx playwright test
+
+      - name: Upload Playwright report
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
