--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,12 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  schedule:
+    # Run every day at 8:00 PM CST
+    # The cron expression syntax is: minute hour day_of_month month day_of_week
+    - cron: '0 20 * * *'
+  workflow_dispatch:
+    # Allows you to run the workflow manually from the GitHub UI
 jobs:
   test:
     timeout-minutes: 60
